# fast-search

./: .cursorrules  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  data\fast-search-lite-db.db-shm  data\fast-search-lite-db.db-wal  tauri.conf.json
src-tauri/data/: init.sql  prompt.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/ai/: lm_studio.rs  mod.rs
src-tauri/src/adapters/reader/: code_reader.rs  csv_reader.rs  pdf_reader.rs  text_reader.rs  word_reader.rs
src-tauri/src/adapters/repository/: sqlite.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/events/: emitters.rs  mod.rs
src-tauri/src/application/factories/: mod.rs  service_factory.rs
src-tauri/src/application/use_cases/: index_content.rs  mod.rs
src-tauri/src/commands/: ai_commands.rs  file_commands.rs  indexing_commands.rs  mod.rs  system_commands.rs  watch_commands.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/entities/: file.rs  mod.rs  progress.rs  query_builder.rs  (+1 more)
src-tauri/src/entities/: ai.rs  file.rs  mod.rs  scan.rs  search.rs  stat.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/ports/: ai.rs  mod.rs  reader.rs  repository.rs
src-tauri/src/services/: ai_service.rs  content_indexer_service.rs  file_service.rs  mod.rs  reader_service.rs
src-tauri/src/shared/: config.rs  errors.rs  helpers.rs  mod.rs  retry.rs
src-tauri/src/utils/: ai.rs  collect.rs  events.rs  file.rs  generator.rs  indexer.rs  mod.rs  scan.rs
(+87 files in other folders)
