[package]
name = "fast-search"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[lib]
name = "fast_search_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
rusqlite = { version = "0.38.0", features = ["bundled"] }
walkdir = "2.5.0"
chrono = "0.4.41"
rayon = "1.11.0"
tokio = { version = "1.0", features = ["full", "sync"] }
lopdf = "0.39.0"
async-trait = "0.1.89"
reqwest = { version = "0.13.1", features = ["json"] }
notify = "8.2.0"
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-retry = "0.3"

[dev-dependencies]
tempfile = "3.10"
